# multi-rag-harness

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
docs/: architecture.md  mcp-tools.md  oss-release-checklist.md  project-structure.md  specification.md  storage.md
plugins/multi-rag-harness-codex/: .mcp.json
plugins/multi-rag-harness-codex/.codex-plugin/: plugin.json
plugins/multi-rag-harness-codex/skills/multi-rag-memory/: SKILL.md
plugins/multi-rag-harness-codex/skills/multi-rag-memory/agents/: openai.yaml
src/multi_rag_harness/: cli.py  config.py
src/multi_rag_harness/codex/: __init__.py  client.py  extraction.py  prompts.py
src/multi_rag_harness/graph/: __init__.py  canonicalize.py  communities.py  extraction.py  models.py  traversal.py
src/multi_rag_harness/ingestion/: chunking.py  documents.py  pipeline.py
src/multi_rag_harness/mcp_server/: __init__.py  schemas.py  server.py  tools.py
src/multi_rag_harness/memory/: __init__.py  code.py  decisions.py  failures.py  tools.py  traces.py
src/multi_rag_harness/models/: __init__.py  embedding.py  local.py  reranker.py
src/multi_rag_harness/retrieval/: __init__.py  hybrid.py  keyword.py  rerank.py  results.py  vector.py
src/multi_rag_harness/storage/: __init__.py  interfaces.py  kuzu.py  pgvector.py  postgres.py  qdrant.py  sqlite.py
tests/: conftest.py  fakes.py
tests/integration/: test_codex_extraction.py  test_communities.py  test_ingest_search.py  test_kuzu_graph.py  test_mcp_tools.py  test_memory_services.py  test_qdrant_index.py  test_sqlite_store.py
tests/unit/: test_api_models.py  test_canonicalize.py  test_chunking.py  test_cli.py  test_codex_client.py  test_codex_prompts.py  test_config.py  test_embedding_prefixes.py  test_extraction_validation.py  test_fts_query.py  test_memory_render.py  test_model_factories.py  test_reranker_adapters.py  test_rrf.py  test_schemas.py  test_storage_factory.py  test_storage_placeholders.py
