[project]
name = "multi-rag-harness"
version = "0.1.0"
description = "Agentic multi-RAG harness with MCP, GraphRAG, reranking, and Codex SDK orchestration"
authors = [
    { name = "straydog", email = "horadog1991@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "kuzu>=0.11.3",
    "mcp>=1.28.1",
    "numpy>=2.4.6",
    "openai-codex>=0.1.0b2",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
