[project]
name = "multi-rag-harness"
version = "0.1.0"
description = "Agentic multi-RAG harness with MCP, GraphRAG, reranking, and Codex SDK orchestration"
readme = "README.md"
authors = [
    { name = "straydog", email = "horadog1991@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
keywords = ["codex", "graphrag", "mcp", "rag", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "anyio>=4.14.1",
    "httpx>=0.28.1",
    "kuzu>=0.11.3",
    "mcp>=1.28.1",
    "numpy>=2.4.6",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "typer>=0.25.1",
]

[project.scripts]
multi-rag-harness = "multi_rag_harness.cli:main"

[project.optional-dependencies]
codex = [
    "openai-codex>=0.1.0b2",
]

[project.urls]
Documentation = "https://github.com/koizumikento/multi-rag-harness/tree/main/docs"
Issues = "https://github.com/koizumikento/multi-rag-harness/issues"
Repository = "https://github.com/koizumikento/multi-rag-harness"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["src/multi_rag_harness"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
